Bug 339643 - NumLock on startup setting is ignored
Summary: NumLock on startup setting is ignored
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Lukáš Tinkl
URL:
Keywords:
: 343832 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-03 16:11 UTC by Valerio De Angelis
Modified: 2015-02-09 11:38 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
Setting page (80.81 KB, image/png)
2014-10-03 16:11 UTC, Valerio De Angelis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Valerio De Angelis 2014-10-03 16:11:04 UTC
The nucklock selection is ignored every boot.
I prefer to have NumLock always ON, so I go to HID in System Setting (see the attached picture), then select "Turn On" in the NumLock on KDE Startup section, however, every boot the numlock is off, I need to switch it on manually.
Comment 1 Valerio De Angelis 2014-10-03 16:11:55 UTC
Created attachment 88945 [details]
Setting page
Comment 2 Valerio De Angelis 2014-10-17 18:28:40 UTC
Hi,
the bug is still present in Plasma 5.1
Comment 3 darktori 2014-10-30 10:43:26 UTC
I can confirm that this bug is present (and very annoying).
Comment 4 Lapinkiller 2014-11-06 18:48:18 UTC
Hello
I confirm the bug too.
Comment 5 Diego 2015-01-15 14:07:31 UTC
Bug still there on Plasma 5.2 Beta (5.1.95).
Comment 6 Martin Klapetek 2015-01-16 16:08:36 UTC
This code still uses XLib while pretty much everything else has moved to XCB. 

I think that this might be related, I'll try to have someone understanding X code to have a look at that.
Comment 7 Lukáš Tinkl 2015-01-23 17:15:23 UTC
Git commit 13abf54e3c9379399878150152d636c475103d83 by Lukáš Tinkl.
Committed on 23/01/2015 at 17:13.
Pushed by lukas into branch 'master'.

use KModifierKeyInfo directly to set the numlock status

M  +1    -1    kcms/keyboard/CMakeLists.txt
M  +3    -6    kcms/keyboard/keyboard_hardware.cpp
D  +0    -305  kcms/keyboard/numlockx.c

http://commits.kde.org/plasma-desktop/13abf54e3c9379399878150152d636c475103d83
Comment 8 Lukáš Tinkl 2015-01-23 17:18:14 UTC
Git commit 640e3b0e15e70ac6bd30289399efbb6a6ebbc0b3 by Lukáš Tinkl.
Committed on 23/01/2015 at 17:13.
Pushed by lukas into branch 'Plasma/5.2'.

use KModifierKeyInfo directly to set the numlock status

M  +1    -1    kcms/keyboard/CMakeLists.txt
M  +3    -6    kcms/keyboard/keyboard_hardware.cpp
D  +0    -305  kcms/keyboard/numlockx.c

http://commits.kde.org/plasma-desktop/640e3b0e15e70ac6bd30289399efbb6a6ebbc0b3
Comment 9 Bhushan Shah 2015-02-09 11:38:54 UTC
*** Bug 343832 has been marked as a duplicate of this bug. ***