use KModifierKeyInfo directly to set the numlock status

BUG: 339643